# polytalk

./: README.md  pyproject.toml
src/duologue/: __init__.py  chat.py  cli.py  client.py  main.py  server.py
src/duologue/templates/: base.html  index.html
src/polytalk/: chat.py  cli.py  client.py  server.py
