[project]
name = "duologue"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Cenk Altı", email = "cenkalti@gmail.com"},
]
dependencies = [
    "fastapi>=0.115.4",
    "openai>=1.53.0",
]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
