[project]
name = "duologue"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Cenk Altı", email = "cenkalti@gmail.com"},
]
dependencies = [
    "fastapi>=0.115.4",
    "openai>=1.53.0",
    "requests>=2.32.3",
    "uvicorn>=0.32.0",
    "typer>=0.12.5",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.scripts]
duologue = "duologue:cli"

[tool.pdm]
distribution = true

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
