[project]
name = "polytalk"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Cenk Altı", email = "cenkalti@gmail.com"},
]
dependencies = [
    "fastapi>=0.115.4",
    "openai>=1.53.1",
    "uvicorn>=0.32.0",
    "typer>=0.12.5",
    "websockets>=13.1",
    "httpx>=0.27.2",
    "prompt-toolkit>=3.0.48",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.scripts]
polytalk = "polytalk.cli:cli"

[tool.pdm]
distribution = true

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
